Fixed card overlap

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -73,6 +73,7 @@ a {
   background: #FFFFFF;
   border: 1px solid #e8e8e8;
   height: auto;
+  min-height: 300px;
   padding-top: 15px;
   padding-bottom: 15px;
   cursor: pointer;
